--- a/index.html
+++ b/index.html
@@ -6,6 +6,76 @@
   <title>Dev Cards</title>
 </head>
 <body>
+  <div id="dev-ui"></div>
   <script type="module" src="index.js"></script>
+  <style>
+    .dev-ui-panel {
+      font-family: system-ui, sans-serif;
+      padding: 1rem;
+      max-width: 20rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background: #f8f8f8;
+    }
+    .dev-ui-title { margin: 0 0 0.75rem; font-size: 1rem; }
+    .dev-stats { margin-bottom: 1rem; }
+    .dev-stat { margin-bottom: 0.25rem; }
+    .dev-stat-label { font-weight: 500; }
+    .dev-tick-btn {
+      padding: 0.4rem 1rem;
+      cursor: pointer;
+      background: #333;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+    }
+    .dev-tick-btn:hover { background: #555; }
+    .dev-control-group { margin-bottom: 1rem; }
+    .dev-control-label { display: block; font-weight: 500; margin-bottom: 0.25rem; font-size: 0.9rem; }
+    .dev-number-row { display: flex; align-items: center; gap: 0.25rem; }
+    .dev-num-btn {
+      width: 2rem;
+      height: 2rem;
+      padding: 0;
+      font-size: 1.2rem;
+      line-height: 1;
+      cursor: pointer;
+      background: #ddd;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .dev-num-btn:hover { background: #ccc; }
+    .dev-num-input { width: 5rem; padding: 0.35rem; }
+    .dev-add-dev-btn {
+      padding: 0.4rem 0.75rem;
+      cursor: pointer;
+      background: #2a7;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+    }
+    .dev-add-dev-btn:hover { background: #389; }
+    .dev-employees-list { list-style: none; margin: 0; padding: 0; }
+    .dev-employee-row {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.25rem 0;
+      border-bottom: 1px solid #eee;
+    }
+    .dev-employee-name { flex: 1; }
+    .dev-employee-motivation { font-variant-numeric: tabular-nums; color: #666; font-size: 0.9rem; }
+    .dev-employee-remove {
+      padding: 0 0.4rem;
+      font-size: 1.2rem;
+      line-height: 1.2;
+      cursor: pointer;
+      background: #e88;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+    }
+    .dev-employee-remove:hover { background: #c66; }
+  </style>
 </body>
 </html>
