--- a/index.html
+++ b/index.html
@@ -9,43 +9,119 @@
   <div id="dev-ui"></div>
   <script type="module" src="index.js"></script>
   <style>
-    .dev-ui-panel {
+    body {
+      margin: 0;
       font-family: system-ui, sans-serif;
+      background: #f0f0f0;
+    }
+    #dev-ui {
+      max-width: 56rem;
+      width: 100%;
+      box-sizing: border-box;
+      margin: 0 auto;
       padding: 1rem;
-      max-width: 20rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .dev-header-bar {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 1rem;
+      padding: 0.75rem 1rem;
+      background: #fff;
       border: 1px solid #ccc;
       border-radius: 6px;
-      background: #f8f8f8;
+      font-variant-numeric: tabular-nums;
+      font-size: clamp(0.8rem, 2vw, 0.9rem);
     }
-    .dev-ui-title { margin: 0 0 0.75rem; font-size: 1rem; }
-    .dev-stats { margin-bottom: 1rem; }
-    .dev-stat { margin-bottom: 0.25rem; }
-    .dev-stat-label { font-weight: 500; }
-    .dev-tick-btn {
-      padding: 0.4rem 1rem;
-      cursor: pointer;
-      background: #333;
-      color: #fff;
-      border: none;
+    .dev-header-stat { display: flex; align-items: center; gap: 0.5rem; }
+    .dev-header-label { color: #666; font-size: 0.85rem; }
+    .dev-header-value { font-weight: 600; }
+    .dev-launch-badge {
+      padding: 0.2rem 0.5rem;
+      font-size: 0.75rem;
       border-radius: 4px;
+      background: #e8f5e9;
+      color: #2e7d32;
     }
-    .dev-tick-btn:hover { background: #555; }
-    .dev-control-group { margin-bottom: 1rem; }
-    .dev-control-label { display: block; font-weight: 500; margin-bottom: 0.25rem; font-size: 0.9rem; }
-    .dev-number-row { display: flex; align-items: center; gap: 0.25rem; }
-    .dev-num-btn {
-      width: 2rem;
-      height: 2rem;
-      padding: 0;
-      font-size: 1.2rem;
-      line-height: 1;
-      cursor: pointer;
-      background: #ddd;
+    .dev-launch-badge.pre-launch {
+      background: #fff3e0;
+      color: #e65100;
+    }
+    .dev-main-grid {
+      display: grid;
+      grid-template-columns: minmax(0, 1fr) minmax(0, 2fr) minmax(0, 1fr);
+      gap: 1rem;
+      min-height: 12rem;
+    }
+    @media (max-width: 48rem) {
+      .dev-main-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+    .dev-left-panel {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 1rem;
+      background: #fff;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 6px;
+      min-width: 0;
+      overflow: auto;
     }
-    .dev-num-btn:hover { background: #ccc; }
-    .dev-num-input { width: 5rem; padding: 0.35rem; }
+    .dev-gauges-section { display: flex; flex-direction: column; gap: 0.5rem; min-width: 0; }
+    .dev-gauge-row {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: clamp(0.75rem, 2vw, 0.85rem);
+      min-width: 0;
+    }
+    .dev-gauge-label { flex-shrink: 0; min-width: 4.5rem; }
+    .dev-gauge-bars {
+      display: flex;
+      gap: 2px;
+      flex-shrink: 0;
+    }
+    .dev-gauge-bar {
+      width: min(1.25rem, 4vw);
+      height: min(0.75rem, 2.5vw);
+      min-width: 0.5rem;
+      min-height: 0.4rem;
+      border-radius: 2px;
+      background: #ddd;
+    }
+    .dev-gauge-bar.filled { background: #4caf50; }
+    .dev-gauge-bar.filled.bad { background: #f44336; }
+    .dev-gauge-bar.filled.neutral { background: #ffc107; }
+    .dev-gauge-bar.filled.inverted-good { background: #4caf50; }
+    .dev-gauge-bar.filled.inverted-bad { background: #f44336; }
+    .dev-card-area {
+      padding: 1rem;
+      background: #fafafa;
+      border: 1px dashed #ccc;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #999;
+      font-size: clamp(0.8rem, 2vw, 0.9rem);
+      min-width: 0;
+    }
+    .dev-team-panel {
+      padding: 1rem;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      min-width: 0;
+      overflow: auto;
+      display: flex;
+      flex-direction: column;
+    }
+    .dev-team-panel h3 { margin: 0 0 0.75rem; font-size: 0.95rem; }
     .dev-add-dev-btn {
       padding: 0.4rem 0.75rem;
       cursor: pointer;
@@ -53,21 +129,36 @@
       color: #fff;
       border: none;
       border-radius: 4px;
+      margin-bottom: 0.75rem;
+      width: 100%;
     }
     .dev-add-dev-btn:hover { background: #389; }
-    .dev-employees-list { list-style: none; margin: 0; padding: 0; }
+    .dev-employees-list { list-style: none; margin: 0; padding: 0; min-width: 0; overflow-y: auto; max-height: 12rem; }
     .dev-employee-row {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
-      padding: 0.25rem 0;
+      gap: 0.35rem;
+      padding: 0.3rem 0;
       border-bottom: 1px solid #eee;
+      font-size: clamp(0.75rem, 2vw, 0.85rem);
+      min-width: 0;
     }
-    .dev-employee-name { flex: 1; }
-    .dev-employee-motivation { font-variant-numeric: tabular-nums; color: #666; font-size: 0.9rem; }
+    .dev-employee-row:last-child { border-bottom: none; }
+    .dev-employee-label { flex: 1; min-width: 0; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+    .dev-employee-salary { font-variant-numeric: tabular-nums; color: #666; flex-shrink: 0; font-size: 0.8em; }
+    .dev-employee-skill { display: flex; gap: 1px; flex-shrink: 0; }
+    .dev-employee-skill-bar {
+      width: min(0.6rem, 2vw);
+      height: min(0.5rem, 1.5vw);
+      min-width: 0.35rem;
+      min-height: 0.3rem;
+      border-radius: 1px;
+      background: #ddd;
+    }
+    .dev-employee-skill-bar.filled { background: #2196f3; }
     .dev-employee-remove {
-      padding: 0 0.4rem;
-      font-size: 1.2rem;
+      padding: 0 0.35rem;
+      font-size: 1.1rem;
       line-height: 1.2;
       cursor: pointer;
       background: #e88;
@@ -76,6 +167,67 @@
       border-radius: 4px;
     }
     .dev-employee-remove:hover { background: #c66; }
+    .dev-control-group { margin-bottom: 0.75rem; }
+    .dev-control-group:last-child { margin-bottom: 0; }
+    .dev-control-label { display: block; font-weight: 500; margin-bottom: 0.25rem; font-size: 0.85rem; }
+    .dev-number-row { display: flex; align-items: center; gap: 0.25rem; }
+    .dev-num-btn {
+      width: 1.75rem;
+      height: 1.75rem;
+      padding: 0;
+      font-size: 1rem;
+      line-height: 1;
+      cursor: pointer;
+      background: #ddd;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .dev-num-btn:hover { background: #ccc; }
+    .dev-num-input { width: 4rem; min-width: 0; max-width: 5rem; padding: 0.3rem; font-size: 0.85rem; box-sizing: border-box; }
+    .dev-history-log {
+      max-height: 8rem;
+      overflow-y: auto;
+      padding: 0.75rem 1rem;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 0.8rem;
+      color: #555;
+    }
+    .dev-history-entry { margin-bottom: 0.25rem; }
+    .dev-history-entry:last-child { margin-bottom: 0; }
+    .dev-next-month-btn {
+      padding: 0.75rem 2rem;
+      font-size: 1.1rem;
+      cursor: pointer;
+      background: #333;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+    }
+    .dev-next-month-btn:hover:not(:disabled) { background: #555; }
+    .dev-next-month-btn:disabled {
+      background: #999;
+      cursor: not-allowed;
+    }
+    .dev-bankruptcy-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 100;
+    }
+    .dev-bankruptcy-box {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      max-width: 24rem;
+      text-align: center;
+    }
+    .dev-bankruptcy-box h2 { margin: 0 0 0.5rem; color: #c62828; }
+    .dev-bankruptcy-box p { margin: 0; color: #555; }
   </style>
 </body>
 </html>
