--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     .dev-num-btn:hover { background: #ccc; }
     .dev-num-input { width: 4rem; min-width: 0; max-width: 5rem; padding: 0.3rem; font-size: 0.85rem; box-sizing: border-box; }
     .dev-history-log {
-      max-height: 8rem;
+      height: 8rem;
       overflow-y: auto;
       padding: 0.75rem 1rem;
       background: #fff;
